# flask-starter

./: .env.example  .flaskenv.example  .gitignore  Makefile  README.md  config.py  docker-compose.yml  main.py  package.json  pyproject.toml  requirements.txt  run.py
app/: __init__.py  config.py  extensions.py
app/auth/: forms.py  models.py  routes.py  utils.py
app/core/: models.py  routes.py
app/email/: email.py
app/jobs/: tasks.py  worker.py
app/static/css/: input.css  main.css
app/static/js/: build.js  htmx.min.js  main.js
app/templates/: base.html  dashboard.html  index.html  profile.html
app/templates/auth/: login.html  register.html  reset_password.html  verify_email.html
app/templates/email/: reset_password.html  verify.html
app/templates/errors/: 403.html  404.html  500.html
app/templates/partials/: navbar.html  toast_alerts.html
app/utils/: email.py  error_handlers.py  security.py
migrations/versions/: 962a321df999_initial_migration.py
tests/: conftest.py  test_auth.py  test_jobs.py
